fix: alignment in display inline

--- a/packages/ketchup/src/components/kup-input-panel/kup-input-panel.scss
+++ b/packages/ketchup/src/components/kup-input-panel/kup-input-panel.scss
@@ -73,6 +73,7 @@
       white-space: nowrap;
       padding: var(--kup_input_panel_padding--inline);
       display: inline-flex;
+      align-items: flex-end;
     }
 
     &--column {
